# AbstrakMaxPlus

./: LICENSE.md  README.md  pyproject.toml
src/abstrak_maxplus/: __init__.py  core.py
